--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,17 @@ markdown:         kramdown
 highlighter:      rouge
 
 # Setup
-title:            BlackDoc
-tagline:          Black Theme for Jekyll
-description:      "A two-column black theme with a scrolling sidebar. Ideal for sites requiring a master-detail layout, e.g. documentation, cheatsheets, lyrics, notes..."
-url:              https://github.com/karloespiritu/blackdoc
+title:            The Official Fealty Site
+tagline:          
+description:      "Fealty is a character-driven strategy game"
+url:              https://oldserge.github.io/fealtyweb/
 baseurl:          /
                   # the optional subpath of your site, e.g. "/my-jekyll-site/"
                   # This will apply to all pages in your Jekyll site.
 
 author:
-  name:           Karlo Espiritu
-  url:            https://twitter.com/karloespiritu
+  name:           FealtyDev
+  url:            https://twitter.com/FealtyDev
 
 paginate:         5
 # paginate_path:    '/page:num'
@@ -27,5 +27,5 @@ plugins:
 # Custom vars
 version:            2.0.1
 
-github:
-  repo:             https://github.com/karloespiritu/blackdoc
+# github:
+#  repo:             https://github.com/karloespiritu/blackdoc
