cleanup sidebar and add version variables

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,9 @@ plugins:
   - jekyll-paginate
 
 # Custom vars
-version:            2.0.1
+version:            0.0.1
+
+gameVersion:        0.10.1
 
 # github:
 #  repo:             https://github.com/karloespiritu/blackdoc
