--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title:            The Official Fealty Site
 tagline:          
 description:      "Fealty is <i>complicated</i>"
 url:              https://fealtygame.com
-baseurl:          /
+baseurl:          
                   # the optional subpath of your site, e.g. "/my-jekyll-site/"
                   # This will apply to all pages in your Jekyll site.
 
