--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@ highlighter:      rouge
 
 # Setup
 title:            The Official Fealty Site
-tagline:          
-description:      "Fealty is <i>complicated</i>"
+tagline:
+description:      "Subscribe to know when the demo is out!"
 url:              https://fealtygame.com
-baseurl:          
+baseurl:
                   # the optional subpath of your site, e.g. "/my-jekyll-site/"
                   # This will apply to all pages in your Jekyll site.
 
