add pledge page, and a bunch of other things

--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@ highlighter:      rouge
 
 # Setup
 title:            The Official Fealty Site
-tagline:
-description:      "Subscribe to know when the demo is out!"
+tagline:          
+description:      "Fealty is a game about city building in a world of conflicting loyalties"
 url:              https://fealtygame.com
-baseurl:
+baseurl:          
                   # the optional subpath of your site, e.g. "/my-jekyll-site/"
                   # This will apply to all pages in your Jekyll site.
 
