--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ plugins:
   - jekyll-paginate
 
 # Custom vars
+google_analytics:   UA-138518196-1
 version:            0.0.1
 
 gameVersion:        0.10.1
