--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,9 @@ author:
   name:           FealtyDev
   url:            https://twitter.com/FealtyDev
 
+# disqus
+comments:         true
+
 paginate:         5
 # paginate_path:    '/page:num'
                     # Or '/my-jekyll-site/page:num' if you want to move your index pages
