task to change index to show excerpts instead of full posts - want to drive traffic to posts for disqus

--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,8 @@ baseurl:
                   # the optional subpath of your site, e.g. "/my-jekyll-site/"
                   # This will apply to all pages in your Jekyll site.
 
+excerpt_separator: <!--more-->                  
+
 author:
   name:           FealtyDev
   url:            https://twitter.com/FealtyDev
